# Parser-project

./: README.txt
src/: 030ComputeAtlas.bms  CMakeLists.txt  CMakeLists.txt~  config.bms  fichier.txt  main.cpp  main.cpp~  out.txt  out_test.bms  parser_clp.xml  parser_clp.xml~
